--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.24.4",
@@ -17,6 +20,7 @@
     "@trpc/next": "^10.9.1",
     "@trpc/react-query": "^10.9.1",
     "@trpc/server": "^10.9.1",
+    "framer-motion": "^9.0.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
